improvement for gissela changes a. fix personal vault filter panel alignment issue b. fix personal vault filter panel text no right space issue c. use original icons
^fox-60574

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -317,7 +317,3 @@ code {
     color: themed("textMuted") !important;
   }
 }
-
-button i.fa {
-  margin-right: 0.25rem;
-}
