--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -104,7 +104,7 @@
     width: 1.2857142857em;
   }
 
-  .fa-folder,
+  .fa-folder-o,
   .fa-cube,
   .fa-pencil {
     align-self: flex-start;
